# claude-code-plugin

./: .editorconfig  .gitattributes  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CLAUDE.md  CNAME  LICENSE  README.md  pyproject.toml  renovate.json
.claude-plugin/: marketplace.json
.claude/rules/: plugin-authoring.md
.github/workflows/: ci.yml
.weside/: config.json  weside.md
docs/: README.md  getting-started.md  mcp.md  plan-format.md  skills.md  troubleshooting.md  upgrade-paths.md  workflow.md
docs/concepts/: companion-framework.md  handoff.md  how-we-work.md  meetings.md  memory.md  retro.md  roles.md
docs/plans/: 31-story.md  handoff-skill.md  retro-skill.md
scripts/: bootstrap-weside-repo.py  check-version-bump.sh  validate-consistency.py  validate-frontmatter.py  validate-plugin-structure.sh
tour/: flight-levels-draft.html  index.html
we/: .mcp.json  CLAUDE.md
we/.claude-plugin/: plugin.json
we/agents/: ac-reviewer.md  code-reviewer.md  council-architect.md  council-legal.md  council-marketing.md  council-orchestrator.md  council-product-owner.md  council-sales.md  council-scrum-master.md  council-security.md  council-ux-researcher.md  doc-architect.md  doc-manager.md  pr-creator.md  static-analyzer.md  test-runner.md
we/commands/: ac-review.md  ci-review.md  doc-check.md  doc-review.md  docs.md  find-dead-code.md  materialize.md  pr.md  refine.md  review.md  story.md  test.md
we/flow/: development-process.md  dod.md  dor.md  epic-management.md  orchestration.md
we/hooks/: hooks.json  refresh_mcp_token.py  store_conversation_hook.py
we/quality/: dod.md  dor.md
we/references/: agent-teams.md  (+14 more)
weside-companion/: .mcp.json  CLAUDE.md
(+79 files in other folders)
