[project]
name = "claude-code-plugin-we"
description = "Agentic Product Ownership toolkit for Claude Code"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 99

[tool.ruff.lint]
select = [
    "F",    # Pyflakes
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "SIM",  # flake8-simplify
    "RUF",  # Ruff-specific
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "PIE",  # flake8-pie
    "RET",  # flake8-return
    "ARG",  # flake8-unused-arguments
    "PL",   # Pylint subset
]
ignore = [
    "T201",    # print() — CLI output mechanism
    "E501",    # line too long — handled by formatter
    "PLR2004", # magic value comparison — CLI uses numeric literals
    "PLR0913", # too many arguments — CLI functions take many params
    "DTZ005",  # datetime.now() without tz — intentional for SQLite
    "SIM108",  # ternary instead of if-else — readability preference
    "RET504",  # unnecessary assignment before return — aids readability
    "ARG001",  # unused function argument — consistent signatures
]

[tool.ruff.lint.per-file-ignores]
"we/scripts/orchestration.py" = [
    "PLR0912", # too many branches — CLI dispatcher
    "PLR0915", # too many statements — argparse setup
    "PLR0911", # too many return statements — many code paths
    "C901",    # too complex — inherent for CLI dispatcher
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
